--- a/LocationUpdatesForegroundService/app/src/main/res/layout/activity_main.xml
+++ b/LocationUpdatesForegroundService/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/remove_location_updates" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 </LinearLayout>
